--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,21 +10,15 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <button (click)="hidetest()">text</button>
-
-  <button (click)="show()">text</button>
-
-  <div id="test">
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
-</div>
-
-</ion-content>
+<ion-content padding text-center>
+      <img [src]="avatarPath" width="100%">
+      <div padding-top>
+        <button ion-button block color="light" (click)="getPicture(0)">从相册选一张</button>
+      </div>
+      <div padding-top>
+        <button ion-button block color="light" (click)="getPicture(1)">拍一张照片</button>
+      </div>
+      <div padding-top>
+        <button type="button" ion-button block (click)="saveAvatar()">保 存</button>
+      </div>
+    </ion-content>
