--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar >
-    <ion-title text-center>用户管理</ion-title>
+    <ion-title >用户管理</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content>
@@ -17,29 +17,24 @@
 
 
   <ion-card-content>
-    <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+    <p>精彩只在一瞬间</p>
   </ion-card-content>
 
   <ion-row>
     <ion-col>
       <button ion-button icon-left clear small>
-        <ion-icon name="thumbs-up"></ion-icon>
-        <div>12 Likes</div>
-      </button>
-    </ion-col>
-    <ion-col>
-      <button ion-button icon-left clear small>
         <ion-icon name="text"></ion-icon>
-        <div>4 Comments</div>
+        <div>查看用户信息</div>
       </button>
     </ion-col>
     <ion-col center text-center>
       <ion-note>
-        11h ago
+        使用时间
       </ion-note>
     </ion-col>
   </ion-row>
 
 </ion-card>
   <button ion-button color="danger" block (click)="outsystem()">退出登录</button>
+
 </ion-content>
