--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title text-center>主页</ion-title>
+<ion-header >
+  <ion-navbar color="primary" hideBackButton="true" >
+        <ion-title text-center >主页</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="open()">
         <ion-icon id="photo" name='contact'></ion-icon>
@@ -10,11 +10,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding >
+<ion-content >
   <div class="div1">
-
-
-<button ion-fab color="primary" text-center class="ion-fab_1" (click)="openStart()">轻微交通事故处理</button>
+<button ion-fab  text-center class="ion-fab_1" (click)="openStart()">轻微交通事故处理</button>
   <ion-grid class="ion_grid_1">
   <ion-row>
     <ion-col>
