--- a/src/pages/repari/responsibility/responsibility.html
+++ b/src/pages/repari/responsibility/responsibility.html
@@ -18,17 +18,17 @@
 
   <ion-item>
     <ion-label>无责</ion-label>
-    <ion-radio checked="true" value="0" (click)="onChoice(0)"></ion-radio>
+    <ion-radio checked="true" value="无责" (click)="onChoice(0)"></ion-radio>
   </ion-item>
 
   <ion-item>
     <ion-label>同责</ion-label>
-    <ion-radio value="1" (click)="onChoice(1)"></ion-radio>
+    <ion-radio value="同责" (click)="onChoice(1)"></ion-radio>
   </ion-item>
 
   <ion-item>
     <ion-label>全责</ion-label>
-    <ion-radio value="2" (click)="onChoice(2)"></ion-radio>
+    <ion-radio value="全责" (click)="onChoice(2)"></ion-radio>
   </ion-item>
 </ion-list>
 
@@ -47,17 +47,17 @@
 
   <ion-item>
     <ion-label>无责</ion-label>
-    <ion-radio checked="true" value="0" (click)="onChoice2(0)"></ion-radio>
+    <ion-radio checked="true" value="无责" (click)="onChoice2(0)"></ion-radio>
   </ion-item>
 
   <ion-item>
     <ion-label>同责</ion-label>
-    <ion-radio value="1" (click)="onChoice2(1)"></ion-radio>
+    <ion-radio value="同责" (click)="onChoice2(1)"></ion-radio>
   </ion-item>
 
   <ion-item>
     <ion-label>全责</ion-label>
-    <ion-radio value="2" (click)="onChoice2(2)"></ion-radio>
+    <ion-radio value="全责" (click)="onChoice2(2)"></ion-radio>
   </ion-item>
 </ion-list>
 
