--- a/src/pages/repari/uncontestedSignature1/uncontestedSignature.html
+++ b/src/pages/repari/uncontestedSignature1/uncontestedSignature.html
@@ -5,24 +5,24 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-card>
+    <!--<ion-card>
       <ion-card-header text-center class="aa">
           本方驾驶人签名
       </ion-card-header>
       <ion-card-content>
           <my-signaturePad></my-signaturePad>
       </ion-card-content>
-    </ion-card>
-    <!--<ion-card>
+    </ion-card>-->
+    <ion-card>
       <ion-card-header text-center class="bb">
           对方驾驶人签名
       </ion-card-header>
       <ion-card-content>
          <my-signaturePad></my-signaturePad>
       </ion-card-content>
-    </ion-card>-->
+    </ion-card>
 
-<button ion-button full color="secondary" (click)="toAOfL()">对方驾驶员签名</button>
+<button ion-button full color="secondary" (click)="toAOfL()">确认生成责任事故书</button>
 
 
 
