--- a/src/pages/lgoin/register/register.html
+++ b/src/pages/lgoin/register/register.html
@@ -15,9 +15,12 @@
       <ion-item>
         <ion-label>手机号</ion-label>
         <ion-input type="number" formControlName="phone"></ion-input>
-
+       <a ion-button outline item-right icon-left (click)="pushNotificationChange(RegisterForm.value)" >
+      <ion-icon name="star"></ion-icon>
+      发送验证码
+    </a>
       </ion-item>
-       <button class="verification" (click)="pushNotificationChange()"  ion-button small color="secondary" *ngIf="RegisterForm.controls.phone.valid">获取验证码</button>
+       <!--<button (click)="pushNotificationChange()"  ion-button small color="secondary" *ngIf="RegisterForm.controls.phone.valid">获取验证码</button>-->
       <span padding-left *ngIf="!RegisterForm.controls.phone.valid&& RegisterForm.controls.phone.touched" color="danger">请输入手机号码</span>
       <ion-item>
         <ion-label>验证码</ion-label>
